Fixed buttons changing colour on mobile

--- a/src/components/Metronome.css
+++ b/src/components/Metronome.css
@@ -157,6 +157,11 @@
     .metronome-radio {
         font-size: 20px;
     }
+
+    .metronome-btn:hover {
+      opacity: 100%;
+      background-color: #d8666c;
+    }
   }
   
   
